# manatee

./: CMakeLists.txt  makefile  manatee
notes/: Monte Carlo.lyx  SPn Derivation.lyx  Spherical Sn.lyx  references.bib  references.bib.bak
notes/code/: collision_code.cc  collision_code.cc~  dfem_plot.py  dfem_plot.py~  phi.txt.bak  plots.py  plots.py~  raw_data.xlsx  scattering_slab6.out  scattering_slab7.out  solution_code.cc  solution_code.cc~  streaming_code.cc  thick_slab6.out  thick_slab7.out  u235.out  ud20.out  uranium.out  weight_code.cc
notes/code/plots/: plot.py  plot.py~
notes/code/plots/scattering/: im0ad0.txt  im0ad0.txt~  im0ad1.txt  im1ad0.txt  im1ad1.txt
notes/code/plots/thick/: im0ad0.txt  im0ad1.txt  im1ad0.txt  im1ad1.txt  im1ad1.txt~
notes/code/scattering_slab7/: deterministic.txt  im0ad1.txt  im1ad0.txt  im1ad1.txt
notes/code/thick_slab7/: deterministic.txt  im0ad0.txt  im0ad1.txt  im1ad0.txt  im1ad1.txt~
proj/: #proj_544.cc#  proj_544.cc  proj_544.cc~  proj_561.cc  proj_561.cc~
src/data/: Data.cc  Data.cc~  Data.hh  Data.hh~
src/manatee/: Manatee.cc  Manatee.cc~
src/mesh/: Finite_Element.cc  Finite_Element.cc~  Finite_Element.hh  Finite_Element.hh~  Mesh.cc  Mesh.cc~  Mesh.hh  Mesh.hh~
src/monte_carlo/: #Monte_Carlo.cc#  .#Monte_Carlo.cc  Bank.cc  Bank.hh  Bank.hh~  Estimator.cc~  Estimator.hh~  Estimators.cc  Estimators.cc~  Estimators.hh  Estimators.hh~  Monte_Carlo.cc  Monte_Carlo.cc~  Monte_Carlo.hh  Monte_Carlo.hh~  Particle.cc  Particle.cc~  Particle.hh  Particle.hh~
src/neutronics/: Neutronics.cc  Neutronics.cc~  Neutronics.hh  Neutronics.hh~
src/parser/: Parser.cc  Parser.cc~  Parser.hh~
src/transport_model/: #SPn_Transport.cc#  .#SPn_Transport.cc  FEM_Transport.cc  FEM_Transport.cc~  FEM_Transport.hh  FEM_Transport.hh~  FEM_Transport_old.cc  Gauss_Legendre.cc  Gauss_Legendre.cc~  Gauss_Legendre.hh  Gauss_Legendre.hh~  Ordinates.cc  Ordinates.hh  Ordinates.hh~  SP1_Transport.cc  SP1_Transport.cc~  SP1_Transport.hh  SP1_Transport.hh~  SPn_Transport.cc  SPn_Transport.cc~  SPn_Transport.hh  SPn_Transport.hh~  Sn_Transport.cc  Sn_Transport.cc~  Sn_Transport.hh  Sn_Transport.hh~  Transport_Model.cc  Transport_Model.cc~  Transport_Model.hh  Transport_Model.hh~
test/: #tst_Manatee.cc#  .#tst_Manatee.cc  ners544_proj.cc~  tst_Manatee.cc  tst_Manatee.cc~
